Enhanced Image Editor component with Cropping and Color correction feature- rgb channels, temp, tint(Created ColorCorrection + Cropper); Updated the component to preview in canvas itself; Updated Panel;

--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -957,10 +957,6 @@ select{
   bottom: -15px;
 }
 
-.bottom-\[-35px\]{
-  bottom: -35px;
-}
-
 .bottom-\[-66px\]{
   bottom: -66px;
 }
@@ -1011,6 +1007,10 @@ select{
 
 .bottom-\[7px\]{
   bottom: 7px;
+}
+
+.bottom-\[8\.1rem\]{
+  bottom: 8.1rem;
 }
 
 .left-0{
@@ -1077,8 +1077,16 @@ select{
   left: 150px;
 }
 
+.left-\[17\.4rem\]{
+  left: 17.4rem;
+}
+
 .left-\[1rem\]{
   left: 1rem;
+}
+
+.left-\[2\%\]{
+  left: 2%;
 }
 
 .left-\[200px\]{
@@ -1157,10 +1165,6 @@ select{
   right: 0px;
 }
 
-.right-1\/2{
-  right: 50%;
-}
-
 .right-12{
   right: 3rem;
 }
@@ -1229,6 +1233,10 @@ select{
   right: 19%;
 }
 
+.right-\[2\%\]{
+  right: 2%;
+}
+
 .right-\[2rem\]{
   right: 2rem;
 }
@@ -1283,10 +1291,6 @@ select{
 
 .top-8{
   top: 2rem;
-}
-
-.top-\[-20px\]{
-  top: -20px;
 }
 
 .top-\[-30px\]{
@@ -1491,14 +1495,6 @@ select{
 
 .top-full{
   top: 100%;
-}
-
-.left-\[2\%\]{
-  left: 2%;
-}
-
-.right-\[2\%\]{
-  right: 2%;
 }
 
 .-z-10{
@@ -3714,6 +3710,10 @@ select{
   max-width: 80rem;
 }
 
+.max-w-\[1000px\]{
+  max-width: 1000px;
+}
+
 .max-w-\[20rem\]{
   max-width: 20rem;
 }
@@ -3920,11 +3920,6 @@ select{
 .translate-y-\[5px\]{
   --tw-translate-y: 5px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.\!rotate-90{
-  --tw-rotate: 90deg !important;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
 .-rotate-90{
@@ -12771,14 +12766,6 @@ select{
     position: sticky;
   }
 
-  .sm\:bottom-0{
-    bottom: 0px;
-  }
-
-  .sm\:left-\[0\.5\%\]{
-    left: 0.5%;
-  }
-
   .sm\:left-\[17rem\]{
     left: 17rem;
   }
@@ -12791,20 +12778,12 @@ select{
     right: 1.5rem;
   }
 
-  .sm\:right-\[2\%\]{
-    right: 2%;
-  }
-
   .sm\:top-6{
     top: 1.5rem;
   }
 
   .sm\:top-\[-3px\]{
     top: -3px;
-  }
-
-  .sm\:top-\[33\%\]{
-    top: 33%;
   }
 
   .sm\:my-\[12rem\]{
@@ -12934,16 +12913,6 @@ select{
 
   .sm\:max-w-md{
     max-width: 28rem;
-  }
-
-  .sm\:-translate-y-1\/2{
-    --tw-translate-y: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:\!rotate-0{
-    --tw-rotate: 0deg !important;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
   }
 
   .sm\:grid-cols-2{
